# Portfolio_Optimization_Sturturing

./: README.md
InvestmentPortfolioAI/: .gitignore  Data&ETF.ipynb  pyproject.toml
InvestmentPortfolioAI/config/: logging_config.yaml  model_config.yaml  prompt_templates.yaml
InvestmentPortfolioAI/notebooks/: Untitled.ipynb
InvestmentPortfolioAI/notebooks/DescriptiveAnalysisPortfoli.ipynb_checkpoints/: Data&ETF.ipynb  Data_ETF.ipynb  DevPlan.ipynb  Markowitz_Analysis.ipynb  Pre_ETFv1.ipynb  app.py  globals.py
InvestmentPortfolioAI/notebooks/DescriptiveAnalysisPortfoli.ipynb_checkpoints/Data/: Asset_Data.csv  UniverseDataSet.ipynb  asset_type_df.csv  returns_since_bought.csv
InvestmentPortfolioAI/notebooks/DescriptiveAnalysisPortfoli.ipynb_checkpoints/exports/: app.py  portfolio.csv
