[tool.poetry]
name = "investmentportfolioai"
version = "0.1.0"
description = "Investment Portfolio AI using Poetry"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
